Fix: Chat scrollbar

--- a/src/components/ui/_scrollbar.scss
+++ b/src/components/ui/_scrollbar.scss
@@ -1,5 +1,5 @@
 .theme-dark{
-    & .scroller-wrap .messages-3amgkR.scroller,
+    & .scrollerWrap-2lJEkd .scroller-2FKFPG.messages-3amgkR,
       #friends .scroller,
       div[class^="emojiPicker"] div[class*="scroller-"],
       div[class^="userPopout-"] .member-roles,
